2003-04-02  Theodore A. Roth  <troth@openavr.org>
[Contributed by Nils Kristian Strom <nilsst@omegav.ntnu.no>].

	* src/jtag.h:
	* src/jtagrw.cc:
	* src/main.cc:
	Add support for writing fuses from the command line.

2003-04-02  Theodore A. Roth  <troth@openavr.org>
[Contributed by Nils Kristian Strom <nilsst@omegav.ntnu.no>].

	* configure.in: Bump version.
	* src/main.cc: Move #include <unistd.h> to fix a build failure on
	FreeBSD.

2003-04-01  Theodore A. Roth  <troth@openavr.org>
[Contributed by Jake McGuire <jake@boom.net>]

	* src/main.cc: Ports should be printed as unsigned values instead of
	signed.

2003-04-01  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Add check for socklen_t type.

2003-04-01  Theodore A. Roth  <troth@openavr.org>
[Contributed by Jake McGuire <jake@boom.net>]

	* configure.in: Bump version.
	* src/jtagio.cc: Don't set serial speed by changing termios structure
	since this breaks on OS X. Use cfsetospeed() and cfsetispeed().

2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Add checks for libsocket and libnsl.

2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/jtag.h: Lengthen JTAG_RESPONSE_TIMEOUT so slower systems have
	a fair chance to respond.
	* src/remote.cc: Passing an int to read(2) is not bigendian friendly,
	so pass an unsigned char instead.

2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* src/remote.cc: Add handling of 'C' packet. Using 'sig SIGHUP' command
	from gdb will cause avarice to reset the user program.

2003-03-27  Theodore A. Roth  <troth@openavr.org>

	* Bootstrap: Remove need to run autotools in src.
	* configure.in: Remove need for src/configure.in.
	* src/configure.in: Remove file.

2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/Makefile.am (avarice_SOURCES): Add ioreg.cc and ioreg.h.
	* src/ioreg.cc: New file.
	* src/ioreg.h: New file.